test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/synchronized-target.yaml
---
apiVersion: v1
data:
  initial_lives: "50"
kind: ConfigMap
metadata:
  labels:
    allowedToBeCloned: "true"
  name: bootstrap-config
  namespace: prod
