test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/02-update.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: update
spec:
  timeouts: {}
  try:
  - apply:
      file: ns.yaml
  - assert:
      file: resource-assert.yaml
