test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/03-update-source.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: update-source
spec:
  timeouts: {}
  try:
  - apply:
      file: update-source.yaml
  - assert:
      file: synchronized-target.yaml
