test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-update/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-clone-list-sync-update
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: manifests.yaml
    - apply:
        file: cluster-policy.yaml
    - assert:
        file: cluster-policy-ready.yaml
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: resource-assert.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: resource-assert.yaml
  - name: step-03
    try:
    - apply:
        file: update-source.yaml
    - assert:
        file: synchronized-target.yaml
